--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@trpc/next": "^10.9.0",
     "@trpc/react-query": "^10.9.0",
     "@trpc/server": "^10.9.0",
+    "axios": "^1.3.4",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
     "react": "18.2.0",
