--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.3.4",
     "next": "^13.2.1",
     "next-auth": "^4.19.0",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
