--- a/.env.example
+++ b/.env.example
@@ -21,5 +21,5 @@ DATABASE_URL="file:./db.sqlite"
 NEXTAUTH_URL="http://localhost:3000"
 
 # Next Auth Discord Provider
-DISCORD_CLIENT_ID=""
-DISCORD_CLIENT_SECRET=""
+AZURE_CLIENT_ID=""
+AZURE_CLIENT_SECRET=""
